# constellation

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  logging.conf  makefile  pyproject.toml  pyrightconfig.json
.github/workflows/: gate.yml
agents/: appointment_scheduler.yaml  demo_agent.yaml  patient_intake.yaml
servers/healthcare/: server.py
src/constellation/: __main__.py  cli.py  loader.py  logger.py  settings.py
src/constellation/audio/: broadcaster.py  input.py  output.py
src/constellation/core/: agent.py  context.py  session.py  turn.py
src/constellation/engines/: async_engine.py  executor.py  registry.py  sync_engine.py
src/constellation/models/: config.py  engine.py  llm.py  mcp.py  task_tag.py  tool.py
src/constellation/services/asr/: deepgram.py
src/constellation/services/llm/: chat.py  service.py  types.py
src/constellation/services/mcp/: client.py  manager.py  transport.py  types.py
src/constellation/services/tts/: openai.py
src/constellation/services/vad/: webrtc.py
src/constellation/tools/: builtins.py  factory.py  registry.py
