[tool.poetry]
name = "constellation"
version = "0.1.0"
description = "A demo of the Constellation Voice Agent harness"
authors = []
packages = [{ include = "constellation", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = "^2.0"
requests = "^2.32"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.0"
pyright = "^1.1.408"
ruff = "^0.15.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
